# DataTreeViewer

./: .clang-format  .gitattributes  .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  NOTICE  README.md  plugin_main.cpp
src/: demo_host.cpp  test.cpp
src/core/: config_node.h  iformat_parser.h  parser_helpers.cpp  parser_helpers.h  parser_registry.cpp  parser_registry.h
src/parsers/: cbor_parser.cpp  cbor_parser.h  env_parser.cpp  env_parser.h  ini_parser.cpp  ini_parser.h  jsonc_parser.cpp  jsonc_parser.h  jsonl_parser.cpp  jsonl_parser.h  nlohmann_convert.h  plist_parser.cpp  plist_parser.h  toml_parser.cpp  toml_parser.h  xml_parser.cpp  xml_parser.h  yaml_parser.cpp  yaml_parser.h
src/ui/: breadcrumb_bar.cpp  breadcrumb_bar.h  data_tree_viewer.cpp  data_tree_viewer.h  node_path.cpp  node_path.h  search_bar.cpp  search_bar.h  status_bar.cpp  status_bar.h  style_assets.h  tree_delegate.cpp  tree_delegate.h  tree_filter_proxy.cpp  tree_filter_proxy.h  tree_model.cpp  tree_model.h  tree_renderer.cpp  tree_renderer.h
src/workers/: background_thread.h  parse_worker.cpp  parse_worker.h
tests/: CMakeLists.txt  test_cbor_parser.cpp  test_env_parser.cpp  test_ini_parser.cpp  test_jsonc_parser.cpp  test_jsonl_parser.cpp  test_node_path.cpp  test_plist_parser.cpp  test_toml_parser.cpp  test_xml_parser.cpp  test_yaml_parser.cpp
tests/fixtures/: bom.json  broken.ini  broken.jsonc  broken.plist  broken.toml  broken.xml  broken.yaml  env_edge.env  ini_edge.ini  jsonc_edge.jsonc  jsonl_edge.jsonl  plist_array.plist  plist_unknown.plist  sample.cbor  sample.env  sample.ini  sample.jsonc  sample.jsonl  sample.plist  sample.toml  sample.xml  sample.yaml  toml_edge.toml  xml_edge.xml  yaml_edge.yaml
